Fixed attendance table overflow

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -69,6 +69,10 @@ a:hover {
     margin-left: 20px !important;
 }
 
+.overflow-auto {
+    overflow: scroll;
+}
+
 .digg_pagination {
     cursor: default;
     float: right !important;
